# core-lib

./: Cargo.toml  flake.nix  rust-toolchain.toml
crates/core/: Cargo.toml
crates/core/src/: color.rs  lib.rs  permission.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
