[package]
name = "harmony_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.55"
harmony_core = { path = "../core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[package.metadata.nix]
devshell.packages = ["wasm-pack", "nodejs"]