[package]
name = "harmony_wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.55"
harmony_core = { path = "../core" }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[package.metadata.nix]
devshell.packages = ["wasm-pack", "nodejs", "wabt"]